--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "hexo-site",
   "version": "0.0.2",
+  "description": "My personal website build with Hexo",
   "private": true,
   "hexo": {
     "version": "3.3.8"
   },
+  "keywords": [
+    "hexo",
+    "hexo-theme-next",
+    "personal-website",
+    "blog",
+    "github-pages"
+  ],
   "dependencies": {
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
