change avatar picture

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -130,7 +130,7 @@ links:
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
-avatar: /images/avatar.jpg
+avatar: /images/avatar.png
 
 # Table Of Contents in the Sidebar
 toc:
