--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository:
-    github: git@github.com:meior/meior.github.io.git
-    coding: git@git.coding.net:meior/meior.git
+  repository: git@github.com:meior/meior.github.io.git
   branch: master
